--- a/Taylr/Base.lproj/Main.storyboard
+++ b/Taylr/Base.lproj/Main.storyboard
@@ -1055,7 +1055,7 @@
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
                                                     <connections>
-                                                        <action selector="linkNewService:" destination="mIZ-vh-lBm" eventType="touchUpInside" id="iP7-aV-qJU"/>
+                                                        <action selector="showLinkServiceOptions:" destination="mIZ-vh-lBm" eventType="touchUpInside" id="X1E-cU-32e"/>
                                                     </connections>
                                                 </button>
                                             </subviews>
@@ -1119,6 +1119,60 @@
                 </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="-273" y="2032"/>
+        </scene>
+        <!--Auth Web View Controller-->
+        <scene sceneID="3kj-NN-7Ln">
+            <objects>
+                <viewController storyboardIdentifier="AuthWeb" id="pWM-p3-qQw" customClass="AuthWebViewController" customModule="Taylr" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="64N-fY-kiD"/>
+                        <viewControllerLayoutGuide type="bottom" id="xkE-wF-jrA"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="I6g-NZ-ZYA">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="45D-IS-tEC">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <color key="barTintColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <items>
+                                    <navigationItem title="Instagram" id="bgK-mN-r8z">
+                                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="N7Z-pL-Wy9">
+                                            <color key="tintColor" red="0.61960784310000006" green="0.4941176471" blue="0.66274509800000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <connections>
+                                                <action selector="cancelAuth:" destination="pWM-p3-qQw" id="6l0-Qb-Tff"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <webView contentMode="scaleToFill" scalesPageToFit="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6ff-bM-c0K">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="delegate" destination="pWM-p3-qQw" id="A9N-75-5UR"/>
+                                </connections>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="45D-IS-tEC" secondAttribute="trailing" id="7ZX-5p-03m"/>
+                            <constraint firstAttribute="trailing" secondItem="6ff-bM-c0K" secondAttribute="trailing" id="D4X-tE-9AE"/>
+                            <constraint firstItem="xkE-wF-jrA" firstAttribute="top" secondItem="6ff-bM-c0K" secondAttribute="bottom" id="bUh-XB-gZY"/>
+                            <constraint firstItem="45D-IS-tEC" firstAttribute="leading" secondItem="I6g-NZ-ZYA" secondAttribute="leading" id="cYZ-U6-PBz"/>
+                            <constraint firstItem="6ff-bM-c0K" firstAttribute="leading" secondItem="I6g-NZ-ZYA" secondAttribute="leading" id="kAW-OL-CX8"/>
+                            <constraint firstItem="6ff-bM-c0K" firstAttribute="top" secondItem="45D-IS-tEC" secondAttribute="bottom" id="pfY-Fn-8kx"/>
+                            <constraint firstItem="45D-IS-tEC" firstAttribute="top" secondItem="64N-fY-kiD" secondAttribute="bottom" id="zau-eq-hCn"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="navBar" destination="45D-IS-tEC" id="c0W-uP-T3c"/>
+                        <outlet property="webView" destination="6ff-bM-c0K" id="DN7-2D-MjA"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yMQ-J3-bWX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-273" y="2725"/>
         </scene>
     </scenes>
     <resources>
