--- a/Taylr/Base.lproj/Onboarding.storyboard
+++ b/Taylr/Base.lproj/Onboarding.storyboard
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dFw-q9-bre">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dFw-q9-bre">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="TransatTextBlack.otf">
@@ -164,5 +166,87 @@
             </objects>
             <point key="canvasLocation" x="-542" y="274"/>
         </scene>
+        <!--Complete Your Profile-->
+        <scene sceneID="c7e-uH-hgv">
+            <objects>
+                <viewController storyboardIdentifier="Signup2" id="BbE-3o-NVZ" customClass="Signup2ViewController" customModule="Taylr" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="lAn-f6-Iyx"/>
+                        <viewControllerLayoutGuide type="bottom" id="fmS-UZ-SkF"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="AWr-CH-w9L">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="T4Y-Zp-oMf">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="AvatarCoverCell" rowHeight="236" id="8QN-DU-seO" customClass="XLFormBaseCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8QN-DU-seO" id="AhA-9L-oIQ">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sample-cover-image" translatesAutoresizingMaskIntoConstraints="NO" id="yQk-Ls-DaV">
+                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="155"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="155" id="kEO-YI-mEg"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sample-taylor-avatar" translatesAutoresizingMaskIntoConstraints="NO" id="y0h-Jf-NZy">
+                                                    <rect key="frame" x="240" y="95" width="120" height="120"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="120" id="ciM-nm-l3k"/>
+                                                        <constraint firstAttribute="width" secondItem="y0h-Jf-NZy" secondAttribute="height" id="sm0-4L-KJR"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="centerX" secondItem="y0h-Jf-NZy" secondAttribute="centerX" id="8Nj-hy-37c"/>
+                                                <constraint firstItem="yQk-Ls-DaV" firstAttribute="leading" secondItem="AhA-9L-oIQ" secondAttribute="leading" id="8rb-OU-0y3"/>
+                                                <constraint firstItem="yQk-Ls-DaV" firstAttribute="top" secondItem="AhA-9L-oIQ" secondAttribute="top" id="BAH-rn-eae"/>
+                                                <constraint firstItem="y0h-Jf-NZy" firstAttribute="centerY" secondItem="yQk-Ls-DaV" secondAttribute="bottom" id="MdM-JN-v8z"/>
+                                                <constraint firstAttribute="bottom" secondItem="y0h-Jf-NZy" secondAttribute="bottom" priority="749" constant="8" id="WUx-UP-Gs8"/>
+                                                <constraint firstAttribute="trailing" secondItem="yQk-Ls-DaV" secondAttribute="trailing" id="c7E-OL-nQ9"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="fmS-UZ-SkF" firstAttribute="top" secondItem="T4Y-Zp-oMf" secondAttribute="bottom" id="21J-Wa-Qe8"/>
+                            <constraint firstAttribute="trailing" secondItem="T4Y-Zp-oMf" secondAttribute="trailing" id="4Dr-Xm-T5y"/>
+                            <constraint firstItem="T4Y-Zp-oMf" firstAttribute="top" secondItem="AWr-CH-w9L" secondAttribute="top" id="Bvo-6u-Uou"/>
+                            <constraint firstItem="T4Y-Zp-oMf" firstAttribute="leading" secondItem="AWr-CH-w9L" secondAttribute="leading" id="FCw-lo-EuT"/>
+                        </constraints>
+                    </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Complete Your Profile" id="kaR-5U-hTV">
+                        <barButtonItem key="rightBarButtonItem" title="Done" id="WcB-e4-dr7">
+                            <connections>
+                                <action selector="submitRegistration:" destination="BbE-3o-NVZ" id="Amb-fD-yFV"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="tableView" destination="T4Y-Zp-oMf" id="Wyj-rp-zD1"/>
+                        <outlet property="view" destination="AWr-CH-w9L" id="UaW-Y6-19D"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zA5-0f-p8h" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="142" y="274"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="sample-cover-image" width="579" height="214"/>
+        <image name="sample-taylor-avatar" width="66" height="67"/>
+    </resources>
 </document>
